# RIM

./: CMakeLists.txt
Projet OpenCV-CMake/: CMakeLists.txt  FichierARFF.arff  README.txt
Projet OpenCV-CMake/Result/: accident_001_01_1_1.txt  accident_001_01_1_2.txt  accident_001_01_1_3.txt  accident_001_01_1_4.txt  accident_001_01_1_5.txt  accident_001_01_3_1.txt  accident_001_01_3_2.txt  accident_001_01_3_3.txt  accident_001_01_3_4.txt  accident_001_01_3_5.txt  accident_002_01_1_1.txt  accident_002_01_1_2.txt  accident_002_01_1_3.txt  accident_002_01_1_4.txt  accident_002_01_1_5.txt  accident_003_01_1_1.txt  accident_003_01_1_2.txt  accident_003_01_1_3.txt  accident_003_01_1_4.txt  accident_003_01_1_5.txt  accident_004_01_1_1.txt  accident_004_01_1_2.txt  accident_004_01_1_3.txt  accident_004_01_1_4.txt  accident_004_01_1_5.txt  accident_004_01_3_1.txt  accident_004_01_3_2.txt  accident_004_01_3_3.txt  accident_004_01_3_4.txt  accident_004_01_3_5.txt  accident_005_01_1_1.txt  accident_005_01_1_2.txt  accident_005_01_1_3.txt  accident_005_01_1_4.txt  accident_005_01_1_5.txt  accident_005_01_3_1.txt  accident_005_01_3_2.txt  accident_005_01_3_3.txt  accident_005_01_3_4.txt  accident_005_01_3_5.txt  (+380 more)
Projet OpenCV-CMake/include/: feature_extraction.hpp  icon_label.hpp  redresser_image.h  text_size.hpp
Projet OpenCV-CMake/src/: feature_extraction.cpp  histogram.cpp  icon_label.cpp  main_projet.cpp  redresser_image.cpp  text_size.cpp
